--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -44,16 +44,16 @@ training:
   batch_size: 128
   max_epochs: 20
   optimizer: "Adam"
-  learn_rate: 0.001
+  learn_rate: 0.0001
   val_check_interval: 0.5     # how often to check validation set within a single training epoch
   n_workers: 4
-  gpus: [1]
+  gpu: 3
 
 # logging options:
 # note: logs are saved to log_dir/experiment_name/experiment_version/
 logging:
   log_dir: "/home/systewar/CLIMuR/train_logs"
-  experiment_name: "initial_tests"
+  experiment_name: "ShortChunk/all_losses"
   experiment_version: null     # automatic versioning if set to null (recommended)
   log_every_n_steps: 20     # how often to log
 ...
