Added dropout layer to projectors.

--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -10,7 +10,7 @@ dataset:
   audio_dataset_dir: "/proj/systewar/datasets/audioset_music_mood"
   image_dataset_val_fract: 0.1
   train_n_batches: 100     # number of batches (per epoch) to use for training set
-  val_n_batches: 20        # number of batches to use for validation set
+  val_n_batches: 100        # number of batches to use for validation set
   sample_rate: 16000
   random_seed: 42
 
@@ -30,6 +30,7 @@ audio_backbone:
 # full model options:
 full_model:
   joint_embed_dim: 128
+  projector_dropout_prob: 0.5
   normalize_image_embeds: true
   normalize_audio_embeds: true
   freeze_image_backbone: true
