--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -28,8 +28,12 @@ audio_backbone:
 
 # full model options:
 full_model:
-  joint_embed_dim: 128
-  projector_dropout_prob: 0.5
+  output_embed_dim: 128
+  multi_task: true
+  base_proj_hidden_dim: 256
+  base_proj_dropout: 0.2
+  base_proj_output_dim: 128
+  task_proj_dropout: 0.5
   normalize_image_embeds: true
   normalize_audio_embeds: true
   freeze_image_backbone: true
@@ -44,7 +48,7 @@ training:
     image2audio: 0.25
     audio2image: 0.25
   batch_size: 64
-  max_epochs: 15
+  max_epochs: 30
   optimizer: "AdamW"
   learn_rate: 0.0001
   val_check_interval: 1.0     # how often to check validation set within a single training epoch
@@ -55,7 +59,7 @@ training:
 # note: logs are saved to log_dir/experiment_name/experiment_version/
 logging:
   log_dir: "/home/systewar/CLIMuR/train_logs"
-  experiment_name: "HarmonicCNN/frozen/all_losses"
+  experiment_name: "multi_task/HarmonicCNN/frozen/all_losses"
   experiment_version: null     # automatic versioning if set to null (recommended)
   log_every_n_steps: 20     # how often to log
 ...
