--- a/configs/config_mtat.yaml
+++ b/configs/config_mtat.yaml
@@ -31,6 +31,7 @@ full_model:
   normalize_audio_embeds: true
   freeze_image_backbone: true
   freeze_audio_backbone: true
+  n_classes: 50
 
 # training options:
 training:
@@ -45,7 +46,7 @@ training:
 # logging options:
 # note: logs are saved to log_dir/experiment_name/experiment_version/
 logging:
-  log_dir: "/home/systewar/CLIMuR/train_logs"
+  log_dir: "/home/avramidi/CLIMuR/train_logs"
   experiment_name: "mtat/HarmonicCNN/frozen/"
   experiment_version: null  # automatic versioning if set to null (recommended)
   log_every_n_steps: 20     # how often to log
