--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -13,6 +13,16 @@ dataset:
   sample_rate: 16000
   random_seed: 42
 
+# data augmentation options:
+audio_augment:
+  n_views: 2
+  gaussian_noise:
+    prob: 0.8
+    min_snr: 5.0
+    max_snr: 40.0
+image_augment:
+  n_views: 2     # currently must be equal to n_views of audio_augment
+
 # audio backbone options:
 audio_backbone:
   model_name: "HarmonicCNN"      # or "ShortChunk" or "SampleCNN" or "CLAP"
