--- a/configs/config_mtat.yaml
+++ b/configs/config_mtat.yaml
@@ -21,11 +21,11 @@ audio_backbone:
 # full model options:
 full_model:
   checkpoint_path: "/home/avramidi/CLIMuR/ckpt/epoch=20-step=2100.ckpt"
-  output_embed_dim: 128
+  output_embed_dim: 256 # 256 for harmonic cnn, else 128
   multi_task: false
   base_proj_hidden_dim: 256
   base_proj_dropout: 0.2
-  base_proj_output_dim: 128
+  base_proj_output_dim: 256 # 256 for harmonic cnn, else 128 (?)
   task_proj_dropout: 0.5
   normalize_image_embeds: true
   normalize_audio_embeds: true
